<resources>
    <string name="app_name">Tetris</string>
    <string name="single_player">Single Player</string>
    <string name="initScoreViewText">Score:\n0</string>
    <string name="initRivalScoreViewText">Rival Score:\n0</string>
    <string name="initYourScoreViewText">Your Score:\n0</string>
    <string name="duel_host">Duel - Host</string>
    <string name="duel_join">Duel - Join</string>
    <string name="settings">Settings</string>
    <string name="scores">Scores</string>
    <string name="tilt_detector">Tilt Detector</string>
    <string name="rotation_relative">Rotation Relative</string>
    <string name="rotation_absolute">Rotation Absolute</string>
    <string name="save">Save</string>
    <string name="random">Random</string>
    <string name="random_sequence">Random Sequence</string>
    <string name="tetromino_generator">Tetromino Generator</string>
    <string name="scores_head_text">You have played * games\n in which you have deleted ? rows</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="speed">Speed</string>
    <string name="adjusting">Adjusting</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="high_scores">High Scores:</string>
    <string name="host">Host</string>
    <string name="join">Join</string>
    <string name="name">Name:</string>
    <string name="mac">Mac:</string>
    <string name="unknown">Unknown</string>
    <string name="scan_info">Warning: some devices might require turning the location on in order for the scan to work properly.</string>
    <string name="idle">SCANNING STATUS: IDLE</string>
    <string name="scanning">SCANNING STATUS: IN PROGRESS</string>
    <string name="scan">Scan</string>
</resources>