<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RadioGroup
        android:id="@+id/tilt_detector_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        tools:ignore="RelativeOverlap">

        <RadioButton
            android:id="@+id/rotation_vector_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotation_relative" />

        <RadioButton
            android:id="@+id/gyroscope_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rotation_absolute" />
    </RadioGroup>

    <TextView
        android:id="@+id/tilt_detector_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilt_detector"
        android:gravity="center"
        android:layout_alignTop="@+id/tilt_detector_radio_group"
        android:layout_alignBottom="@+id/tilt_detector_radio_group"
        android:layout_marginStart="50dp" />

    <RadioGroup
        android:id="@+id/generator_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tilt_detector_radio_group"
        android:layout_alignStart="@+id/tilt_detector_radio_group">

        <RadioButton
            android:id="@+id/std_generator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random" />

        <RadioButton
            android:id="@+id/sequence_generator_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/random_sequence" />
    </RadioGroup>

    <TextView
        android:id="@+id/tetromino_generator_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tetromino_generator"
        android:gravity="center"
        android:layout_alignTop="@+id/generator_radio_group"
        android:layout_alignBottom="@+id/generator_radio_group"
        android:layout_alignStart="@+id/tilt_detector_text_view" />

    <RadioGroup
        android:id="@+id/sound_effects_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/generator_radio_group"
        android:layout_alignStart="@+id/generator_radio_group">

        <RadioButton
            android:id="@+id/sound_effects_on_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on" />

        <RadioButton
            android:id="@+id/sound_effects_off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off" />

    </RadioGroup>

    <TextView
        android:id="@+id/sound_effects_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_effects"
        android:gravity="center"
        android:layout_alignTop="@+id/sound_effects_radio_group"
        android:layout_alignBottom="@+id/sound_effects_radio_group"
        android:layout_alignStart="@+id/tetromino_generator_text_view" />

    <RadioGroup
        android:id="@+id/speed_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/sound_effects_radio_group"
        android:layout_alignStart="@+id/sound_effects_radio_group">

        <RadioButton
            android:id="@+id/speed_constant_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/easy" />

        <RadioButton
            android:id="@+id/speed_constant_hard_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hard" />

        <RadioButton
            android:id="@+id/speed_adjusting_radio_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/adjusting" />

    </RadioGroup>

    <TextView
        android:id="@+id/speed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed"
        android:gravity="center"
        android:layout_alignTop="@+id/speed_radio_group"
        android:layout_alignBottom="@+id/speed_radio_group"
        android:layout_alignStart="@+id/sound_effects_text_view" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/save" />

</RelativeLayout>