<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".android.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
       />

    <Button
        android:id="@+id/single_player_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_player" />

    <Button
        android:id="@+id/duel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duel" />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings" />

    <Button
        android:id="@+id/scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores" />


</androidx.appcompat.widget.LinearLayoutCompat>