<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background_grey">

    <TextView
        android:id="@+id/scan_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan_info"
        android:gravity="center"
        android:textColor="@color/warning_red"
        android:textSize="12sp" />

    <Button
        android:id="@+id/join_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:textColor="@color/black"
        android:backgroundTint="@color/light_grey" />

    <TextView
        android:id="@+id/scan_state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idle"
        android:gravity="center"
        android:textColor="@color/yellow" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bluetooth_devices_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</androidx.appcompat.widget.LinearLayoutCompat>